Closed
Bug 1821146
Opened 2 years ago
Closed 2 years ago
Crashes due to using a cycle-collected object on a thread that isn't cycle collected in WebTransport
Categories
(Core :: DOM: Networking, defect, P2)
Core
DOM: Networking
Tracking
()
RESOLVED
FIXED
113 Branch
Tracking | Status | |
---|---|---|
firefox113 | --- | fixed |
People
(Reporter: jesup, Assigned: jesup)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
This is caused by calling Bind(endpoint) without passing a thread target if we're on a worker, which targets the worker thread, and not the correct event target for the worker.
Assignee | ||
Comment 1•2 years ago
|
||
Also fixes the worker shutdown handling associated with this
Pushed by rjesup@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/889174ce36fd
Bind() IPC to worker's event target for WebTransport r=asuth
Comment 3•2 years ago
|
||
Backed out for causing build bustages on WebTransportDatagramDuplexStream.cpp
- Backout link
- Push with failures
- Failure Log
- Failure line: /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:300:33: error: function 'mozilla::dom::Promise::ThenWithCycleCollectedArgs<(lambda at /builds/worker/checkouts/gecko/dom/webtransport/api/WebTransportDatagramDuplexStream.cpp:190:13), RefPtr<mozilla::dom::IncomingDatagramStreamAlgorithms> &, RefPtr<mozilla::dom::Promise> &>' is used but not defined in this translation unit, and cannot be defined in any other translation unit
Flags: needinfo?(rjesup)
Pushed by rjesup@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/204fead3800d
Bind() IPC to worker's event target for WebTransport r=asuth
Comment 5•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox113:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(rjesup)
You need to log in
before you can comment on or make changes to this bug.
Description
•