Bug 1821146: Bind() IPC to worker's event target for WebTransport r=asuth

Also fixes the worker shutdown handling associated with this

Differential Revision: https://phabricator.services.mozilla.com/D172038